# kodegen-native-permissions

./: .gitignore  Cargo.toml  README.md  justfile
.devcontainer/: Dockerfile  devcontainer.json
examples/: basic_usage.rs  batch_permissions.rs
src/: config.rs  lib.rs  manager.rs  traits.rs  types.rs
tests/: async_api_tests.rs
