[package]
name = "kodegen_native_permissions"
version = "0.10.5"
edition = "2024"
description = "KODEGEN.ᴀɪ: Memory-efficient, Blazing-Fast, MCP tools for code generation agents."
authors = ["KODEGEN.ᴀɪ"]
homepage = "https://kodegen.ai"
repository = "https://github.com/cyrup-ai/kodegen-native-permissions"
readme = "README.md"
categories = ["development-tools", "command-line-utilities", "api-bindings"]
keywords = [
    "mcp",
    "terminal",
    "agent",
    "filesystem",
    "claude"
]
license = "Apache-2.0 OR MIT"

[dependencies]
tokio = { version = "1", features = [
    "io-util",
    "macros",
    "process",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
] }

dashmap = "6"
once_cell = "1"
dirs = "6"

[target.'cfg(target_os = "macos")'.dependencies]
tokio-util = "0.7"
macos-accessibility-client = "0.0.1"
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-core-location = "0.3"
objc2-contacts = "0.3"
objc2-event-kit = "0.3"
objc2-av-foundation = "0.3"
objc2-core-bluetooth = "0.3"
objc2-core-wlan = "0.3"
objc2-photos = "0.3"
objc2-speech = "0.3"
objc2-user-notifications = "0.3"
block2 = "0.6"
parking_lot = "0.12"
home = "0.5"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Media_Capture",
    "Devices_Geolocation",
    "Security_Authorization_AppCapabilityAccess",
    "Devices_Bluetooth",
    "Devices_WiFi",
    "Networking_Connectivity",
    "UI_UIAutomation",
    "Foundation",
    "Graphics_Capture",
    "Win32_UI_Input",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_WindowsProgramming",
    "Win32_Media_DirectShow",
    "Win32_Media_MediaFoundation",
    "Win32_Media_Multimedia",
    "Win32_Security_Authorization",
    "Win32_System_SystemServices"
] }
tauri-winrt-notification = "0.7"
windows-version = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.12", features = ["tokio"] }
zbus = "5"
dbus = "0.9"
futures = "0.3"

[lib]
name = "kodegen_native_permissions"
path = "src/lib.rs"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
